<resources>
    <string name="email_autor" translatable="false">Email: deisesalles18@gmail.com</string>
    <string name="app_nome">ShoppingManager</string>
    <string name="text_view_titulo">Item Registration</string>
    <string name="text_view_nome_item">Name:</string>
    <string name="dica_nome_item">Item name</string>
    <string name="text_view_quantidade_item">Quantity:</string>
    <string name="dica_quantidade_item" translatable="false">23</string>
    <string name="text_view_valor_unitario_item">Unit price:</string>
    <string name="text_view_categoria">Category:</string>
    <string name="text_view_unidade_de_medida">Unit of measure:</string>
    <string name="radio_button_forma_unidade">Unit</string>
    <string name="radio_button_kg" translatable="false">Kg</string>
    <string name="check_box_item_perecivel">Perishable item?</string>
    <string name="botton_salvar">Save</string>
    <string name="button_limpar">Clear</string>
    <string name="campos_apagados_com_sucesso">Fields cleared successfully.</string>
    <string name="erro_nome_vazio">Name must be filled in</string>
    <string name="erro_quantidade_vazia">Quantity must be filled in</string>
    <string name="erro_valor_vazio">Unit price must be filled in</string>
    <string name="erro_unidade_nao_selecionada">Select a unit of measure</string>
    <string name="dados_salvos_sucesso">Data saved successfully</string>
    <string name="erro_categoria_vazia">Select a category</string>
    <string name="check_box_perecivel_sim">Perishable item: Yes</string>
    <string name="check_box_perecivel_nao">Perishable item: No</string>
    <string name="dado_tipo_item_spinner_hortifruti">Produce</string>
    <string name="dado_tipo_item_spinner_carnes_aves">Meat and Poultry</string>
    <string name="dado_tipo_item_spinner_peixes_frutos_do_mar">Fish and Seafood</string>
    <string name="dado_tipo_item_spinner_laticinios">Dairy</string>
    <string name="dado_tipo_item_spinner_padaria">Bakery</string>
    <string name="dado_tipo_item_spinner_graos_cereais">Grains and Cereals</string>
    <string name="dado_tipo_item_spinner_massas_molhos">Pasta and Sauces</string>
    <string name="dado_tipo_item_spinner_enlatados_conservas">Canned and Preserved Foods</string>
    <string name="dado_tipo_item_spinner_congelados">Frozen Foods</string>
    <string name="dado_tipo_item_spinner_bebidas">Beverages</string>
    <string name="dado_tipo_item_spinner_produtos_limpeza">Cleaning Products</string>
    <string name="dado_tipo_item_spinner_higiene_pessoal">Personal Hygiene</string>
    <string name="itemAlertaMensagem">Item: \"</string>
    <string name="selecionadoAlertaMensagem">\" selected</string>
    <string name="sobre_app">About</string>
    <string name="logo_descricao">UTFPR Logo</string>
    <string name="descricao_do_app">Application developed to manage supermarket shopping lists, allowing users to add items, track purchased products, and better organize their shopping. It also provides an estimate of the total purchase value, helping with planning and financial control.</string>
    <string name="nome_autor">Author: Deise Sales de Araujo</string>
    <string name="curso_autor">Course: Java Technology</string>
    <string name="lista_de_itens">Item List</string>
    <string name="botao_adicionar">Add</string>
    <string name="novo_item">New Item</string>
    <string name="menu_editar">Edit</string>
    <string name="menu_excluir">Delete</string>
    <string name="item_excluido">Item deleted successfully.</string>
    <string name="text_view_titulo_editar_item">Item Editor</string>
    <string name="titulo_sugerir_tipo">Suggest Type</string>
    <string name="menu_item_titulo_ordenacao">Sorting</string>
    <string name="titulo_confirmacao">Confirmation</string>
    <string name="mensagem_confirmacao_exclusao">Are you sure you want to delete this item?</string>
    <string name="sim">Yes</string>
    <string name="nao">No</string>
    <string name="restaurar_padroes">Restore Defaults</string>
    <string name="padroes_restaurados">Settings have been restored to installation defaults</string>
    <string name="ok" translatable="false">OK</string>
    <string name="confirmacao">Confirmation</string>
    <string name="deseja_voltar_padroes">Are you sure you want to restore defaults?</string>
    <string name="desfazer">Undo</string>
    <string name="dados_editados_com_sucesso">Data edited successfully</string>
    <string name="erro_de_conversao_no_clone_do_item">Error in item cloning during conversion</string>
    <string name="erro_ao_tentar_excluir_item">Error while trying to delete item</string>
    <string name="erro_ao_tentar_restaurar_item">Error while trying to restore item</string>
    <string name="erro_ao_tentar_inserir_novo_item">Erro ao tentar inserir novo item</string>
    <string name="erro_ao_tentar_alterar_item">Erro ao tentar alterar item</string>
</resources>